
*** XMonad

+ new workspace bindings
  + =M-S-h= :: previous workspace
  + =M-S-l= :: next workspace
  + =M-[= :: shift current window to previous workspace, and
             switch to that workspace
  + =M-]= :: shift current window to next workspace, and
             switch to that workspace

+ new workspace configuration
  + =main=, =terminal=, =web=, and =other= workspaces

** Changed

*** Emacs

+ calendar sync warnings now include a timestamp

+ maximum length for =org-cliplink= descriptions is now 500

**** Org

+ timeless agenda entries are now positioned before the
  schedule for today

** Fixed

*** Emacs

+ ~my-org-refile-dwim~ complaining about ~org-capture-mode~
  not being previously loaded

* 0.8.0 - 2018-08-06

** Added

+ Initial XScreenSaver configuration

*** Emacs

+ configuration for =maybe.org= agenda file

+ initial =org-brain= configuration

*** XMonad

+ bindings for volume control

  + lower volume

  + mute

  + raise volume

** Changed

+ =rofi= is now used in place of =dmenu= for XMonad

+ terminal now uses Emacs-like bindings rather than Vi-like

*** Emacs

+ =Complete= agenda view now shows cancelled items

+ ~my-org-fill-column~ is now ~62~

+ projects (for GTD) are now kept in =gtd.org=

+ reordered refile targets to favour more likely targets first

+ refile target for projects now uses =aof= tag rather than
  level

** Fixed

*** =org-agenda=

+ all incomplete inbox items now show in =Unprocessed= agenda
  view

*** XMonad

+ =FreeMind= should now display correctly with XMonad

* 0.7.0 - 2018-07-12

** Added

+ ~history~ command now displays timestamps

*** Emacs

**** Commands

+ ~my-search-duckduckgo~

+ ~my-search-duckduckgo-site~

+ ~my-search-gtd-forum~

**** Org

+ capture template for single-day events

***** Agenda

+ new bulk command for cancelling and archiving marked entries

****** New Agenda Views

+ calendar

+ deadlines

+ someday/maybe

  + areas of focus

  + categories

  + potential projects
